--- a/style.css
+++ b/style.css
@@ -2,3 +2,22 @@
  color: #15C923;
  text-align: center;
 }
+
+.buttongeneral {
+ width: 25%;
+}
+
+.option1 {
+ width: 100%;
+ height: 0;
+ padding-bottom: 100%;
+ border-radius: 50%;
+ border: 10px solid #F10303;
+ overflow: hidden;
+ background: #F10303;
+ box-shadow: 0 0 3px #D1CDCD;
+}
+
+.buttongeneral a {
+ 
+}
