--- a/style.css
+++ b/style.css
@@ -1,33 +1,37 @@
-.round-button {
-	width:25%;
+.title {
+ color: #15C923;
+ text-align: center;
 }
-.round-button-circle {
-	width: 100%;
-	height:0;
-	padding-bottom: 100%;
-    border-radius: 50%;
-	border:10px solid #cfdcec;
-    overflow:hidden;
-    
-    background: #4679BD; 
-    box-shadow: 0 0 3px gray;
+
+.buttongeneral {
+ width: 25%;
 }
-.round-button-circle:hover {
-	background:#30588e;
+
+.option1 {
+ width: 100%;
+ height: 0;
+ padding-bottom: 100%;
+ border-radius: 50%;
+ border: 10px solid #F10303;
+ overflow: hidden;
+ background: #F10303;
+ box-shadow: 0 0 3px gray;
 }
-.round-button a {
-    display:block;
-	float:left;
-	width:100%;
-	padding-top:50%;
-    padding-bottom:50%;
-	line-height:1em;
-	margin-top:-0.5em;
-    
-	text-align:center;
-	color:#e2eaf3;
-    font-family:Verdana;
-    font-size:1.2em;
-    font-weight:bold;
-    text-decoration:none;
+
+.buttongeneral a {
+ display: block;
+ float: left;
+ width: 100px;
+ padding-top: 50px;
+ padding-bottom: 50px;
+ line-height: 1em;
+ margin-top: -0.5em;
+ text-align: center;
+ color: #e2eaf3;
+ font-family: Verdana;
+ font-size: 1.2em;
+ font-weight: bold;
+ text-decoration: none;
 }
+
+
