--- a/style.css
+++ b/style.css
@@ -1,1 +1,22 @@
+header {
+ padding: 20px 0; 
+}
 
+header.row {
+ display: flex;
+  align-items: center;
+}
+
+header h1 {
+ margin: 0; 
+}
+
+header nav {
+ display: flex;
+  justify-content: flex-end;
+}
+
+header p{
+ padding: 0 20px;
+  margin: 0;
+}
