--- a/style.css
+++ b/style.css
@@ -20,3 +20,13 @@ header p{
  padding: 0 20px;
   margin: 0;
 }
+
+
+.nav {
+ color: black;
+}
+
+.nav: hover {
+ color: #0A81C1;
+ text-decoration: underline;
+}
