--- a/style.css
+++ b/style.css
@@ -32,8 +32,6 @@ header p{
 }
 
 section .row img {
-  margin: 0 15px 0 15px;
-  padding: 0 15px 0 15px;
- border: 15px
+  margin: 0 0 30;
   width: 100%;
 }
