--- a/style.css
+++ b/style.css
@@ -1,37 +1,3 @@
-header {
- padding: 20px 0; 
-}
-
-header.row {
- display: flex;
-  align-items: center;
-}
-
-header h1 {
- margin: 0; 
-}
-
-header nav {
- display: flex;
-  justify-content: flex-end;
-}
-
-header p{
- padding: 0 20px;
-  margin: 0;
-}
-
-
-.nav {
- color: black;
-}
-
-.nav: hover {
- color: #0A81C1;
- text-decoration: underline;
-}
-
-section .row img {
-  margin: 0  30px 0 30px;
-  width: 100%;
+.options {
+ text-align: right;
 }
