--- a/style.css
+++ b/style.css
@@ -1,1 +1,8 @@
-
+.dropdown-toggle .icon-bar {
+  margin-bottom:2px;
+  display: block;
+  width: 22px;
+  height: 2px;
+  background-color: black;
+  border-radius: 1px;
+}
