--- a/gallery.css
+++ b/gallery.css
@@ -1,1 +1,16 @@
+header{
+ width: 100%;
+  position: fixed;
+  display: flex;
+ justify-content: flex-end;
+}
 
+#options{
+ padding: 23px 20px;
+ margin: 0;
+ font-size: 15px;
+}
+
+#option2{
+ margin: 15px;
+}
