--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-#space{
- background-image: url(maxresdefault.jpg);
+body {
+ padding: 0;
+ margin: 0;
+ font-family:"Courier New", Courier, monospace;
+}
+
+.nav {
+ padding: 30px 0 30px 0;
+ text-decoration: none;
+ background-color: #595959;
 }
