--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@ body {
  padding: 30px 0 30px 0;
  text-decoration: none;
  background-color: #595959;
+ text-align: right;
 }
 
 ul > li{
- text-decoration: none;
+ display: inline-block;
+ padding-right: 20px;
 }
