--- a/style.css
+++ b/style.css
@@ -32,6 +32,6 @@ ul > li > a:hover {
 #header {
  font-size: 25px;
  color: #ffffff;
- padding: 30 0 30 30
+ padding: 30px 0 30px 30px;
   text-align: right;
 }
