--- a/style.css
+++ b/style.css
@@ -33,5 +33,5 @@ ul > li > a:hover {
  font-size: 25px;
  color: #ffffff;
  padding: 30px 0 30px 30px;
-  text-align: right;
+  text-align: left;
 }
