--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ ul > li > a:hover {
  padding: 30px 0 30px 0;
  text-decoration: none;
  background-color: #595959;
+}
+
+.nav > li {
  text-align: right;
- position: fixed;
 }
