--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ ul > li > a:hover {
 #header {
  font-size: 25px;
  color: #ffffff;
- padding: 30px 0 30px 30px;
-  text-align: left;
+ padding-right: 50px;
 }
 
 .nav {
