--- a/style.css
+++ b/style.css
@@ -30,8 +30,11 @@ ul > li > a:hover {
 }
 
 .nav {
- padding: 30px 0 30px 0;
  text-decoration: none;
  background-color: #595959;
  text-align: right;
+}
+
+.element {
+ padding: 30px 0 30px 0;
 }
