--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
  padding: 0;
  margin: 0;
  font-family:"Courier New", Courier, monospace;
- background-color: #595959;
+ background-image: url("cool_space_galaxy_desktop_backgrounds_2-1024x636.jpg")
 }
 
 
