--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@ ul > li {
  padding: 30 30 30 0;
  margin-right: 30px;
 }
+
+ul > li > a{
+ text-decoration: none;
+ color: white;
+}
+
+ul > li > a:hover {
+ color: #26C663;
+}
