--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
  padding: 0px;
   margin: 0px;
  font-family: "Comic Sans MS", cursive, sans-serif;
+ background-color: #26C663;
 }
 
 ul {
@@ -10,7 +11,6 @@ ul {
  position: fixed;
  text-align: right;
  width: 100%;
- border-radius: 10px;
 }
 
 ul > li {
