--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ ul {
  text-decoration: none;
  background-color: grey;
  position: fixed;
- text-align: right;
  width: 100%;
 }
 
-ul > li {
+.element{
  display: inline-block;
  padding: 30 30 30 0;
  margin-right: 30px;
+ text-align: right;
 }
 
 ul > li > a{
