--- a/style.css
+++ b/style.css
@@ -9,17 +9,14 @@ ul {
  text-decoration: none;
  background-color: grey;
  position: fixed;
+ text-align: right;
  width: 100%;
 }
 
-.element{
+ul > li{
  display: inline-block;
  padding: 30 30 30 0;
  margin-right: 30px;
-}
-
-#tingy {
- text-align: right;
 }
 
 ul > li > a{
@@ -29,4 +26,8 @@ ul > li > a{
 
 ul > li > a:hover {
  color: #26C663;
+}
+
+#header{
+ padding: 30 300 30 0;
 }
