--- a/style.css
+++ b/style.css
@@ -13,18 +13,18 @@ ul {
  width: 100%;
 }
 
-ul > li{
+.element{
  display: inline-block;
  padding: 30 30 30 0;
  margin-right: 30px;
 }
 
-ul > li > a{
+a{
  text-decoration: none;
  color: white;
 }
 
-ul > li > a:hover {
+a:hover {
  color: #26C663;
 }
 
